--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -292,6 +292,7 @@ The two sub-classes are:
 * `AddModCommand` -- Add a module to a student (Registers the student for a particular module)
 * `RemoveModCommand` -- Removes a module from a student (Drops a module from the student's workload)
 
+.Structure of ModCommand
 image::ModCommandClassDiagram.png[]
 
 Each addmod or removemod command has a `execute()` method that takes in a `Model` object. These commands
@@ -317,6 +318,7 @@ Step 4. `AddModCommand.execute()` is called.
 
 The following activity diagram shows how `AddModCommand.execute()` works
 
+.AddModCommand Activity Diagram
 image::AddModCommandActivityDiagram.png[]
 
 `ApproveCommand.execute()`
@@ -337,6 +339,7 @@ with the newly created objects. The success message of addmod request will be re
 
 The following sequence diagram shows how ApproveCommand works:
 
+.AddModCommand Sequence Diagram
 image::AddModSequenceDiagram.png[]
 [NOTE]
 An exception is thrown when any of the checks fail. The break interaction operator is placed at the bottom
@@ -369,6 +372,7 @@ Similarly the types of resolution commands for `Reject` are
 * `RejectCommand` -- rejects an individual appeal by index shown in the in-app UI
 * `MassReject` -- rejects multiple appeals by the ID of appeals
 
+.Structure of ResolveCommand
 image::ResolveCommandClassDiagram.png[]
 
 Each appeal resolution command has a `execute()` method that takes in a `Model` object. Resolve commands retrieve information of all students and modules from model to get the relevant student and module.
@@ -407,6 +411,7 @@ Step 4. `ApproveCommand.execute()` is called.
 
 The following activity diagram shows how `ApproveCommand.execute()` works
 
+.ApproveCommand Activity Diagram
 image::ApproveCommandActivityDiagram.png[]
 
 [NOTE]
@@ -429,6 +434,7 @@ Step 5.  Upon approval of an appeal, `ApproveCommand` will return a `CommandResu
 
 The following sequence diagram shows how ApproveCommand works:
 
+.ResolveCommand Sequence Diagram
 image::ResolveSequenceDiagram.png[]
 
 
@@ -469,13 +475,14 @@ Also, because Mass resolve commands operates on appeal IDs, `model.getFullAppeal
 
 The following activity diagram shows how `MassApprove.execute()` works
 
+.MassApprove Activity Diagram
 image::MassApproveActivityDiagram.png[]
 
 Step 5.  After resolving all the appeal IDs in the valid Appeal list, `MassApprove` will return a `CommandResult` object which contains the feedback message.  Feedback message will show a list of successfully approved appeal IDs,
 a list of unresolved modules which include the list of invalid appeal IDs entered by user and appeal IDs
 and a list of appeal IDs with time table clash detected.
 
-
+.MassResolve Sequence Diagram
 image::MassResolveSequenceDiagram.png[]
 
 To implement design considerations......
@@ -516,6 +523,7 @@ arrows, constantly replacing the text field with the previous commands when iter
 Below is a class diagram depicting the relationship between the involved classes for cycling
 through previous inputs in the command box.
 
+.CommandHistory Class Diagram
 image::CycleCommandHistoryClassDiagram.png[]
 
 `CommandHistory` provides an unmodifiable view into the command history using an `ObservableList`
@@ -528,6 +536,7 @@ through its internal defensive list.
 Below is a simple sequence diagram depicting this function. Note that some methods/pathways are not
 depicted for brevity.
 
+.CommandHistory Sequence Diagram
 image::CycleCommandHistorySequenceDiagram.png[]
 
 The diagram above first shows how `CommandBox` re-initializes and updates `ListPointer` after
@@ -558,6 +567,7 @@ about the command history to the user
 The following activity sequence diagram provides a high-level view
 of how the command is executed:
 
+.HistoryCommand Activity Diagram
 image::HistoryCommandActivityDiagram.png[]
 
 One specific execution example of the show-history feature with
@@ -576,6 +586,7 @@ the flags in `HistoryWindow` contoller accordingly.
 This specific execution case is shown in the following sequence diagram. Note that some
 methods are omitted for brevity.
 
+.HistoryCommand Sequence Diagram
 image::HistoryCommandSequenceDiagram.png[]
 
 NOTE: The lifeline for `HistoryCommandParser` and `HistoryCommand` should end at the destroy marker (X), but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
@@ -735,6 +746,7 @@ The three sub-classes are:
 * `UndoCommand` -- Undo last action.
 * `RedoCommand` -- Redo last undo.
 
+.Structure of StoreCommand
 image::StoreCommandClassDiagram.png[]
 
 Each sub-class has a `execute()` method that takes in a `Model` object. Store commands only retrieve information from /data file and replaces the current state with the targeted state.
@@ -760,6 +772,7 @@ Step 5. Each `StoreCommand` returns a `CommandResult` object which contains the 
 
 The following sequence diagram shows how the undo operation works:
 
+.UndoCommand Sequence Diagram
 image::UndoSequenceDiagram.png[]
 
 ===== Aspect: Dealing with storage of states
