Removed references to recurrence, fix some comparator bugs and update UG

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -126,33 +126,83 @@ which can be useful should you ever forget how to execute a certain command.
 
 Format: `help`
 
+// tag::transactions[]
 === Managing transactions: `txn`
+
+image::txnUG1.png[]
+
+Transactions form the core of BudgetBuddy. They can be used to track any purchases you make,
+or any money that you receive. Transactions can further be filtered by various criteria,
+if you want to find out how much money you've spent in a certain time period, on in
+a certain category of spending.
 
 ==== Add a transaction: `txn out|in`
 
 Adds a new transaction of the specified amount and with the given description.
 
-Format: `txn dn/out|in x/<amount> d/<description> [a/<account>] [c/<category>] [w/<date>] [r/<d|w|m|y>]`
+Format: `txn dn/out|in x/<amount> d/<description> [a/<account>] [c/<category>] [w/<date>]`
+
+Examples:
+
+* txn dn/out x/3 d/apples a/food c/fruits w/5/4/2019
+
+* txn dn/in x/50 d/pocket money a/school
+
 ****
-* If the account is not given, the transaction is inserted into the active account.
+* The account provided has to be exist before transactions can be added to it.
+* If the account is not given, the transaction is added to the active account.
 * If the category is not given, the transaction is not categorized.
 * If the date is not given, the date is set to the current date.
-* If the argument ‘r’ is added, the transition is marked as recurring;
-identical entries will be added either daily, weekly, monthly, or yearly.
 ****
 
 ==== Edit a transaction: `txn edit`
 
-Edits the specified transaction, setting the specified fields.
-If the ‘recurring’ field is modified, the app will ask if all previous recurring entries should be deleted.
+Edits the specified transaction, setting the specified fields. At least one field should be provided.
 
-Format: `txn edit <id> dn/out|in [x/<amount>] [d/<description>] [a/<account>] [c/<category>] [w/<date>] [r/<d|w|m|y>]`
+Format: `txn edit <id> dn/out|in [x/<amount>] [d/<description>] [a/<account>] [c/<category>] [w/<date>]`
+
+Examples:
+
+* txn edit 1 x/50 d/apple juice c/groceries
+
+* txn edit 4 a/personal
+
+****
+* The new edited transaction should have at least 1 field different from the previous transaction.
+* If a new account is provided, that account will be the new active account.
+****
 
 ==== Delete transaction(s): `txn delete`
 
-Deletes the transaction with the specified ID.
+Deletes the transaction with the specified ID on the current list of filtered transactions.
 
 Format: `txn delete <id>`
+
+Examples:
+
+* txn delete 3
+
+==== List transactions(s): 'txn list'
+
+Lists the transactions from the current active account, with optional filters and sorting methods.
+
+Format: `txn list [c/category] [f/from date] [u/until date] [af/from amount] [au/until amount] [d/description]
+[s/<aw|dw|ax|dx|ad|dd>]`
+
+Examples:
+
+* txn list c/food u/10/4/2019 af/5 au/10 d/fruits s/ad
+****
+The explanation of the sorting abbreviations are as follows:
+
+* aw: Sort transactions by ascending date.
+* dw: Sort transactions by descending date.
+* ax: Sort transactions by ascending amount.
+* dx: Sort transactions by descending amount.
+* ad: Sort transactions by description, ascending alphabetically.
+* dd: Sort transactions by description, descending alphabetically.
+****
+// tag::transactions[]
 
 // tag::accounts[]
 === Managing accounts: `account`
